--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Website</title>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="icon" type="image/x-icon" href="" /> -->
+    <title>Inderdeep</title>
   </head>
   <body>
-    <main>
-      <h1>Welcome to My Website</h1>
-      <p>This is my new website which is hosted on GitHub Pages!</p>
-    </main>
+    <div class="flex">
+      <div class="center">
+        <h1>Inderdeep's Website</h1>
+        <p>More Stuff Coming soon ... Until then...</p>
+        <p>
+          Follow
+          <a href="https://www.instagram.com/inder.archives/">Inder Archives</a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
